Added supply information on summary

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -21,7 +21,7 @@ html
               div(class='value', id='coinInfoDifficulty') -
             div(class='info-tr')
               div(class='name') Supply
-              div(class='value') -
+              div(class='value', id='coinInfoSupply') -
           a(href='https://www.vdinar.info', target='_blank')
             div(class='website')
               div(class='title') vDinar's official website
