Added time format for transactions page

--- a/views/transactions.pug
+++ b/views/transactions.pug
@@ -36,7 +36,7 @@ html
                 div(class='transactions-tr transactions-tr--main')
                   div(class='transactions-td') Transaction index
                   div(class='transactions-td') Transaction hash
-                  div(class='transactions-td') Time
+                  div(class='transactions-td') Time (GMT)
                 - for (var i = 1; i <= 10; i++)
                   div(class='transactions-tr transactions-tr--values', id='transaction' + i)
                     div(class='transactions-td', id='transactionIndex' + i)
